--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ a {
     color: white;
 }
 
+img {
+    width: 100%;
+}
+
 .btn {
     border: none;
     background: none;
@@ -126,8 +130,8 @@ span.feature-tag {
     font-weight: 700;
 }
 
-.feature-info p {
-    padding: 2rem 0;
+.para {
+    padding: 1.2rem 0;
     font-size: 1.2rem;
     color: #f1f1f1;
 }
@@ -143,4 +147,28 @@ span.feature-tag {
 .btn-link .lni {
     margin-left: 1rem;
     font-size: 1.8rem;
+}
+
+main {
+    margin-top: 20rem;
+}
+
+.blog-card {
+    padding: 1rem 0;
+}
+
+.card-image {
+    overflow: hidden;
+    border-radius: .7rem;
+    max-height: 500px;
+    position: relative;
+}
+
+span.card-tag {
+    position: absolute;
+    bottom: 5%;
+}
+
+.card-title {
+    margin-top: 1rem;
 }
