--- a/style.css
+++ b/style.css
@@ -172,3 +172,31 @@ span.card-tag {
 .card-title {
     margin-top: 1rem;
 }
+
+.cta-sec {
+    margin: 2rem .5rem;
+}
+
+.cta-container {
+    /*background-color: #f1f1f1;*/
+    background-image: linear-gradient(200deg, #797e83, #f1f1f1);
+    padding: 2rem;
+    border-radius: .5rem;
+    color: #1d1b1e;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.cta-container h2 {
+    margin-bottom: 2.5rem;
+}
+
+.btn-cta {
+    /*background-color: #EE8D1F;*/
+    padding: .8rem 1.5rem;
+    background-image: linear-gradient(180deg, #572d11, #a35a35);
+    border-radius: 50px;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 700;
+}
