--- a/style.css
+++ b/style.css
@@ -200,3 +200,38 @@ span.card-tag {
     font-size: 1rem;
     font-weight: 700;
 }
+
+footer {
+    background-image: url('./assets/bg-footer-m.png');
+    background-size: 450px;
+    background-repeat: no-repeat;
+    padding-bottom: 2rem;
+    background-position-y: bottom;
+    background-position-x: right;
+}
+
+.footer-sec {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+footer ul,
+li {
+    margin-bottom: 1rem;
+}
+
+h2.footer-header {
+    margin-top: 2.5rem;
+}
+
+.footer-address h2 {
+    margin-bottom: 1rem;
+}
+
+.footer-address p>span {
+    display: block;
+}
+
+.footer-address h4 {
+    margin-bottom: .5rem;
+}
