--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;500;600;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -48,7 +56,11 @@ nav {
 .nav-sec {
     width: 95%;
     margin: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
     padding: 1.5rem 1.2rem;
 }
@@ -67,7 +79,7 @@ nav {
 }
 
 header {
-    background-image: url('./assets/wave-mobile.png');
+    background-image: url('../assets/wave-mobile.png');
     background-size: contain;
     background-position-y: 260%;
     overflow: hidden;
@@ -76,8 +88,14 @@ header {
 
 .header-sec {
     padding: 4rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -103,7 +121,7 @@ section.featured {
 }
 
 .feature-image {
-    background-image: url('./assets/bg-image-hero.png');
+    background-image: url('../assets/bg-image-hero.png');
     height: 100%;
     background-size: cover;
     position: relative;
@@ -146,7 +164,11 @@ span.feature-tag {
     font-weight: 700;
     font-size: 1.2rem;
     text-transform: uppercase;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -184,7 +206,7 @@ span.card-tag {
 }
 
 .cta-container {
-    /*background-color: #f1f1f1;*/
+    background-image: -o-linear-gradient(250deg, #797e83, #f1f1f1);
     background-image: linear-gradient(200deg, #797e83, #f1f1f1);
     padding: 2rem;
     border-radius: .5rem;
@@ -198,8 +220,9 @@ span.card-tag {
 }
 
 .btn-cta {
-    /*background-color: #EE8D1F;*/
     padding: .8rem 1.5rem;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#572d11), to(#a35a35));
+    background-image: -o-linear-gradient(top, #572d11, #a35a35);
     background-image: linear-gradient(180deg, #572d11, #a35a35);
     border-radius: 50px;
     text-transform: uppercase;
@@ -208,7 +231,7 @@ span.card-tag {
 }
 
 footer {
-    background-image: url('./assets/bg-footer-m.png');
+    background-image: url('../assets/bg-footer-m.png');
     background-size: 450px;
     background-repeat: no-repeat;
     padding-bottom: 2rem;
@@ -217,7 +240,9 @@ footer {
 }
 
 .footer-sec {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
 }
 
@@ -273,8 +298,14 @@ h2.footer-header {
 
 
     .nav-links {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         width: 75%
     }
@@ -284,7 +315,7 @@ h2.footer-header {
     }
 
     header {
-        background-image: url('./assets/wave-desktop.png');
+        background-image: url('../assets/wave-desktop.png');
         background-size: cover;
         padding-bottom: 5rem;
     }
@@ -292,7 +323,9 @@ h2.footer-header {
     section.featured {
         padding: 0 3rem;
         margin-top: -5rem;
+        display: -ms-grid;
         display: grid;
+        -ms-grid-columns: 2fr 1fr;
         grid-template-columns: 2fr 1fr;
     }
 
@@ -301,7 +334,9 @@ h2.footer-header {
     }
 
     .blog-cards {
+        display: -ms-grid;
         display: grid;
+        -ms-grid-columns: 1fr 2rem 1fr 2rem 1fr;
         grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
     }
@@ -312,6 +347,7 @@ h2.footer-header {
     }
 
     .card-image img {
+        -o-object-fit: cover;
         object-fit: cover;
         height: 180px;
     }
@@ -335,21 +371,29 @@ h2.footer-header {
     }
 
     footer {
-        background-image: url('./assets/footer-image.png');
+        background-image: url('../assets/footer-image.png');
         background-size: contain;
         padding-top: 2rem;
     }
 
     .footer-sec {
+        display: -ms-grid;
         display: grid;
+        -ms-grid-columns: 1fr 20px 1fr;
         grid-template-columns: 1fr 1fr;
         gap: 20px;
     }
 
     .footer-left,
     .footer-right {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
         align-items: flex-start;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
     }
 
@@ -387,6 +431,8 @@ h2.footer-header {
         position: absolute;
         left: 6%;
         top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
         transform: translateY(-50%);
     }
 
